# SourcePauseTool

./: CMakeLists.txt  CONTRIBUTORS  LICENSE  README.md  patterns_archive.hpp  spt.vcxproj  spt.vcxproj.filters
.github/workflows/: CI.yml
spt/: spt-version.cpp
spt/aim/: aimstuff.cpp  aimstuff.hpp
spt/features/: aim.cpp  entitylist.cpp  hud.cpp  hud.hpp  playerio.cpp  tas.cpp  tas.hpp  tracing.cpp  tracing.hpp  updater.cpp
spt/features/game_fixes/: visual_fixes.cpp
spt/features/visualizations/: tas_editor.cpp
spt/features/visualizations/imgui/: imgui_interface.cpp  imgui_interface.hpp
spt/scripts/: srctas_reader.cpp  srctas_reader.hpp
spt/strafe/: strafestuff.cpp
spt/utils/: string_utils.hpp
